<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="PowerManager" Id="{0d0a7d0a-6db2-45b6-b6da-063463895a99}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PowerManager
VAR
	shutdownButton			AT%I*  : BOOL := FALSE;
	batteryVoltageRaw  		AT%I*  : INT;
	shutdownTrigger 		AT%Q*  : BOOL := FALSE;
	batteryVoltage_V		AT%Q*  : REAL;
	
	supplyCurrentRaw		AT%I* : INT;
	supplyCurrent_A			AT%Q* : REAL; 
	
	SOC AT%I* : REAL;
	
	requestShutdown 		AT%I* : BOOL;
	
	shutdown: NT_Shutdown;

	scaleVoltage:	REAL := LREAL_TO_REAL(20/EXPT(2,16)); 		// (Spannungsbereich der Klemme)/(Wertebereich)
	dummy:  REAL;
	
	stMqtt_HAWino_IN	AT%Q*	: ST_PwrMgmt_HAWino_In;			// Link MQTT-DatenStruct
	
	shut: INT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF shutdownButton THEN
	shutdown(DELAY:=1, START:=TRUE);
END_IF

batteryVoltage_V := (batteryVoltageRaw * scaleVoltage * 2.0);

//batteryVoltage_V := batteryVoltageRaw;

supplyCurrent_A :=  supplyCurrentRaw * 1000.0 / 270.0 / 32768 * 10;
//supplyCurrent_A :=  supplyCurrentRaw;
// TODO: Filter and CALIBRATE this!
//shutdownTrigger := requestShutdown ;// OR batteryVoltage_V < 14.0;

IF batteryVoltage_V < 12 AND SOC < 10 THEN
	
	//shutdownTrigger := TRUE;

END_IF

stMqtt_HAWino_IN.fActualBatteryVoltage := batteryVoltage_V;
stMqtt_HAWino_IN.fActualBatteryCurrent := supplyCurrent_A;


//stMqtt_HAWino_In.fActualBatteryVoltage := batteryVoltage_V;
//stMqtt_HAWino_In.fActualBatteryCurrent := supplyCurrent_A]]></ST>
    </Implementation>
    <LineIds Name="PowerManager">
      <LineId Id="346" Count="2" />
      <LineId Id="361" Count="0" />
      <LineId Id="360" Count="0" />
      <LineId Id="469" Count="1" />
      <LineId Id="369" Count="0" />
      <LineId Id="368" Count="0" />
      <LineId Id="363" Count="0" />
      <LineId Id="349" Count="0" />
      <LineId Id="357" Count="0" />
      <LineId Id="443" Count="2" />
      <LineId Id="448" Count="0" />
      <LineId Id="447" Count="0" />
      <LineId Id="446" Count="0" />
      <LineId Id="388" Count="0" />
      <LineId Id="358" Count="0" />
      <LineId Id="390" Count="0" />
      <LineId Id="423" Count="0" />
      <LineId Id="417" Count="0" />
      <LineId Id="419" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>